--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -244,6 +244,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.63.98.250;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -817,6 +818,7 @@ allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -841,12 +843,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -889,6 +891,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1031,6 +1034,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:121:4484::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1091,7 +1095,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1560,7 +1563,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
