--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -23,6 +23,7 @@ allow 100.42.29.174;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -161,7 +162,6 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.133.14;
-allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -227,7 +227,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.150.204;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -836,6 +835,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -843,12 +843,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1110,6 +1110,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:9970:36ce:47a6:804c;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1419,6 +1420,7 @@ allow 2a12:de40:21:1be4::;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1445,7 +1447,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1652,6 +1653,7 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.96.141.198;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
