--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -362,6 +362,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:9970:36ce:47a6:804c;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
