--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -362,6 +362,7 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
+deny 2a05:6e02:1108:cc10:9970:36ce:47a6:804c;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
