--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,7 +123,6 @@ allow 109.70.100.71;
 allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
-allow 114.172.205.8;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -825,6 +824,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -851,7 +851,6 @@ allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -883,6 +882,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1424,6 +1424,7 @@ allow 2a12:de40:21:1be4::;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1450,7 +1451,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1467,6 +1467,7 @@ allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
+allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
