--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -820,6 +820,7 @@ deny 23.129.64.163;
 deny 23.129.64.164;
 deny 23.129.64.165;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -885,6 +886,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1087,6 +1089,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1548,6 +1551,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
